--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -14,6 +14,12 @@
         <span class="BY">беларуская</span>
         <input type="checkbox" class="check">-->
 
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contacts">Contact</a>
+        </div>
+
         <div id="sidebar">
             <a class="container" onclick="Function1(this)">
                 <div class="bar1" style="position: fixed; top: 17px; left: 19px;"></div>
